pathfinding kind of fixed